# spinegen

./: .gitignore  README.md  TODO.md  design_1.md  pyproject.toml
.windsurf/rules/: workspace.md
data/real/: TS1_s200_equivalent_area_SAnorm.swc  TS21_s200_equivalent_area_SAnorm.swc  TS24_s200_equivalent_area_SAnorm.swc  TS2_s200_equivalent_area_SAnorm.swc  TS3_s200_equivalent_area_SAnorm.swc  TS48_s200_equivalent_area_SAnorm.swc  TS4_s200_equivalent_area_SAnorm.swc  TS67_s200_equivalent_area_SAnorm.swc  TS76_s200_equivalent_area_SAnorm.swc
data/synthetic/: synthetic_spine.swc
examples/: copula_prior_example.py  validation_example.py
package_references/: swctools_reference.md
scripts/utils/: generate_package_reference.py
spinegen/: __init__.py  analyzer.py  cable_graph.py  conditional_prior.py  generator.py  prior.py  utils.py  validator.py
tests/: test_pipeline.py
