[project]
name = "spinegen"
version = "0.1.0"
description = "Algorithmic generation of neural spines in cable-graph model format with cycle support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copulas>=0.14.1",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "scipy>=1.15.1",
    "swctools",
]

[tool.setuptools]
packages = ["spinegen"]

[tool.uv.sources]
swctools = { git = "https://github.com/jmrfox/swctools.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
]
